[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "endpointscanner"
version = "7.0.3"
readme = "README.md"
description = "Website endpoint reconnaissance tool and rate limit tester that bypasses simple captchas."
requires-python = ">=3.9"
keywords = ["endpoint-scanner", "website-recon", "bug-bounty", "rate-limiting", "dir-search", "url-discovery", "web-reconnaissance"]
dependencies = [
    "curl_cffi",
    "beautifulsoup4",
    "playwright",
    "playwright-stealth"
]

[project.scripts]
# pyprojectthing
endpointscanner = "enumerateendpoint:main"
