[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "endpointscanner"
version = "7.2"
readme = "README.md"
description = "Website endpoint reconnaissance tool and rate limit tester that bypasses simple captchas."
requires-python = ">=3.9"
keywords = ["endpoint-scanner", "website-recon", "bug-bounty", "rate-limiting", "dir-search", "url-discovery", "web-reconnaissance"]
dependencies = [
    "curl_cffi",
    "beautifulsoup4",
    "playwright",
    "playwright-stealth",
    "httpx[http2]>=0.27.0"
]

[project.scripts]
# pyprojectthing
endpointscanner = "enumerateendpoint:main"

[project.urls]
Homepage = "https://github.com/SphericalFlower52811/endpointscanner"
Issues = "https://github.com/SphericalFlower52811/endpointscanner/issues"
Repository = "https://github.com/SphericalFlower52811/endpointscanner"

